cmake_minimum_required(VERSION 3.4)
PROJECT(ex2_01)

FIND_PACKAGE(ITK)
IF (ITK_FOUND )
  INCLUDE( ${ITK_USE_FILE} )
ENDIF(ITK_FOUND)

FIND_PACKAGE(VTK)

IF(VTK_FOUND)
  INCLUDE(${VTK_USE_FILE})
ENDIF(VTK_FOUND)

INCLUDE_DIRECTORIES(${ex2_01_SOURCE_DIR})

ADD_EXECUTABLE(ex2_01 ex2_01.cxx)

TARGET_LINK_LIBRARIES(ex2_01
 ${ITK_LIBRARIES}
 ${VTK_LIBRARIES}
)
